<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"

    tools:context="com.example.jacques.exo001_layout.ShowActivity">

    <TextView
        android:id="@+id/firstname_lb"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/firstname_hint"/>
    <TextView
        android:id="@+id/lastname_lb"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastname_hint"/>
    <TextView
        android:id="@+id/address_lb"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_hint"/>
    <TextView
        android:id="@+id/city_lb"
        android:layout_column="0"
        android:layout_row="3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city_hint"/>
    <TextView
        android:id="@+id/country_lb"
        android:layout_column="0"
        android:layout_row="4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country_hint"/>

</LinearLayout>
